@@ -24,6 +24,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [change] display vsync defaulted to on for new databases. I would advise turning this on if not already
 - [change] all RX display offsets are now done in one place in the code
 - [change] TX-ATT label has been changed to [S-ATT]
+- [change] spectrum gradient change. Now -150 to +10 dBm.  NOTE: all gradients will need to be adjusted
 - [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
 - [fix] fixed rare out of bounds issue in memory ScheduleUpdate
 - [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
